--- a/CSS/boxmodel.html
+++ b/CSS/boxmodel.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Box Model</title>
     <link rel="stylesheet" href="boxmodel.css">
+    <style>
+        .box {
+            width: 200px;
+            height: 100px;
+            border: 3px solid black;
+            padding: 20px;
+            margin: 20px;
+            background-color: lightgray;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 
 <body>
