--- a/CSS/text.html
+++ b/CSS/text.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text properties</title>
     <style>
-        .text1 p {
+        .text{
             font-family: Arial, sans-serif;
             font-size: 16px;
             color: red;
             text-align: justify;
             line-height: 1.5;
             text-decoration: underline;
+        }
+
+        .text2 p {
+            font-family: 'Times New Roman', serif;
+            font-size: 18px;
+            color: blue;
+            text-align: center;
+            line-height: 1.8;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -22,6 +31,9 @@
     <hr>
     <div class="text1">
         <p>This is a sample paragraph demonstrating various CSS text properties.</p>
+    </div>
+    <div class="text2">
+        <p>Another example with different font and alignment.</p>
     </div>
 </body>
 
