--- a/CSS/css_grid.html
+++ b/CSS/css_grid.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <!-- Grid CSS Grid is a 2-dimensional layout system in CSS that lets you design web layouts using rows and columns at the same time.-->
+    <!-- CSS Grid is a 2-dimensional layout system in CSS that lets you design web layouts using rows and columns at the same time.-->
     <h2 align="center">CSS Grid</h2>
     <hr>
     <div class="container">
