grid margin correction

--- a/CSS/css_grid.html
+++ b/CSS/css_grid.html
@@ -11,6 +11,10 @@
             padding: 0;
         }
 
+        body{
+            margin: 20px;
+        }
+        
         .container {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -20,7 +24,6 @@
 
         .box{
             background-color: lightblue;
-            margin: 10px;
             padding: 50px;
             color: black;
             text-align: center;
