--- a/CSS/animation.html
+++ b/CSS/animation.html
@@ -11,9 +11,9 @@
             width: 100px;
             background-color: yellow;
             animation-name: moveBox;
-            animation-duration: 5s;
+            animation-duration: 2s;
             animation-timing-function: linear;
-            animation-delay: 0s;
+            animation-delay: 2s;
             position: relative;
         }
 
@@ -28,11 +28,39 @@
             }
 
         }
+
+        .move {
+            margin: 20px;
+            width: 100px;
+            height: 100px;
+            background: green;
+            animation: move 3s linear infinite;
+        }
+
+        @keyframes move {
+            0% {
+                transform: translateX(0px);
+            }
+
+            50% {
+                background-color: yellow;
+                transform: translateX(500px);
+            }
+
+            100% {
+                background-color: red;
+                transform: translateX(1200px);
+            }
+        }
     </style>
 </head>
 
 <body>
     <div class="box">
+
+    </div>
+
+    <div class="move">
 
     </div>
 </body>
