--- a/Login Form/index.html
+++ b/Login Form/index.html
@@ -27,6 +27,14 @@
 
             <p class="signup-text">Don't have an account? <a href="#">Sign up</a></p>
 
+            <p class="or-text">—  or sign up using —</p>
+
+            <div class="social-login">
+                <a href="#" class="google">Google</a>
+                <a href="#" class="linkedin">LinkedIn</a>
+                <a href="#" class="github">GitHub</a>
+            </div>
+
         </form>
     </div>
 </body>
