responsive nav bar css part

--- a/CSS/responsive_navbar.html
+++ b/CSS/responsive_navbar.html
@@ -12,7 +12,13 @@
 <body>
 
     <nav class="navbar">
-        <div class="logo">Myntra</div>
+        <div class="logo"></div>
+
+        <!-- Toggle Button -->
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="hamburger">
+            <i class="fa-solid fa-bars"></i>
+        </label>
 
         <ul class="menu">
             <li><a href="">MEN</a></li>
