nested if statement

--- a/JS/conditional_statements.html
+++ b/JS/conditional_statements.html
@@ -14,7 +14,9 @@
     <h4>1 if = executes a block only if condition is true</h4>
     <h4>2 if...else = runs one block if condition is true, another is false</h4>
     <h4>3 if...else if...else = used to check multiple conditions</h4>
-
+    <h4>4 Nested if = A nested if statement means placing one if (or if..else) inside another if.
+        It is used when a condition should be checked only if a previous condition is true.</h4>
+        
     <script src="conditional_statements.js"></script>
 </body>
 
