--- a/JS/conditional_statements.html
+++ b/JS/conditional_statements.html
@@ -11,12 +11,14 @@
 
     <h3>Conditional Statements in Javascript</h3>
     <hr>
-    <h4>1 if = executes a block only if condition is true</h4>
-    <h4>2 if...else = runs one block if condition is true, another is false</h4>
-    <h4>3 if...else if...else = used to check multiple conditions</h4>
-    <h4>4 Nested if = A nested if statement means placing one if (or if..else) inside another if.
+    <h4>1. if = executes a block only if condition is true</h4>
+    <h4>2. if-else = runs one block if condition is true, another is false</h4>
+    <h4>3. if-else if-else = used to check multiple conditions</h4>
+    <h4>4. Nested-if = A nested if statement means placing one if (or if..else) inside another if.
         It is used when a condition should be checked only if a previous condition is true.</h4>
-        
+
+    <h4>5. Switch case = It ia control statement used to execute differnt code blocks based on value of single expression</h4>
+
     <script src="conditional_statements.js"></script>
 </body>
 
