Ternary operator in js

--- a/JS/conditional_statements.html
+++ b/JS/conditional_statements.html
@@ -17,7 +17,12 @@
     <h4>4. Nested-if = A nested if statement means placing one if (or if..else) inside another if.
         It is used when a condition should be checked only if a previous condition is true.</h4>
 
-    <h4>5. Switch case = It ia control statement used to execute differnt code blocks based on value of single expression</h4>
+    <h4>5. Switch case = It ia control statement used to execute differnt code blocks based on value of single
+        expression</h4>
+
+    <h4>6. Ternary operator = A short hand for if-else
+        <h5>Syntax: condition ? trueOutput : falseOutput</h5>
+    </h4>
 
     <script src="conditional_statements.js"></script>
 </body>
