print the square of each value using forEach Loop

--- a/JS/functions-practiseQ1.html
+++ b/JS/functions-practiseQ1.html
@@ -72,6 +72,17 @@
 
         reverseString("java");
 
+        console.log("----------------------------------");
+
+        // For a given array of number, print the square of each value using forEach Loop.
+
+        let nums = [2, 4, 5, 6, 7];
+
+        console.log(`Square Numbers:`);
+        nums.forEach((num) => {
+            console.log(num * num);
+        });
+    
     </script>
 </body>
 
