IIFE - Immediately Invoked Function  Expression

--- a/JS/functions.html
+++ b/JS/functions.html
@@ -17,6 +17,9 @@
         <li>Function with Return Value</li>
         <li>Function Expression</li>
         <li>Arrow Function</li>
+        <li>Call Back Function</li>
+        <li>Anonymous Function</li>
+        <li>Immediately Invoked Function Expression</li>
     </ol>
 
     <script src="functions.js"></script>
