Arrays method - filter()

--- a/JS/arrayMethods.html
+++ b/JS/arrayMethods.html
@@ -13,6 +13,8 @@
     <ol>
         <li>map() - create a new array with result of some operation. transform each element and original array does not
             change.</li>
+        <li>filter() - create a new array, returns elements that satisfy a condition true or false and original array
+            does not change</li>
     </ol>
     <script src="arrayMethods.js"></script>
 </body>
