Array method - reduce()

--- a/JS/arrayMethods.html
+++ b/JS/arrayMethods.html
@@ -14,7 +14,8 @@
         <li>map() - create a new array with result of some operation. transform each element and original array does not
             change.</li>
         <li>filter() - create a new array, returns elements that satisfy a condition true or false and original array
-            does not change</li>
+            does not change.</li>
+        <li>reduce() - perform some opertion and reduces array to a single value.</li>
     </ol>
     <script src="arrayMethods.js"></script>
 </body>
