--- a/JS/DOM/dom_practise.html
+++ b/JS/DOM/dom_practise.html
@@ -30,18 +30,18 @@
 
 <body>
 
-    <!-- Create a H2 heading element with text "Hello" Append "Good Morning, I am Darshan L" using JavaScript -->
+    <!-- 1) Create a H2 heading element with text "Hello" Append "Good Morning, I am Darshan L" using JavaScript -->
     <h2 id="head">Hello</h2>
 
-    <!-- Create 3 divs with the same class name "box"Access them using JavaScript and assign unique text -->
+    <!-- 2) Create 3 divs with the same class name "box"Access them using JavaScript and assign unique text -->
     <div class="box">First div</div>
     <div class="box">Second div</div>
     <div class="box">Third div</div>
 
-    <!-- Create a new button element. Give it a text "click me!", background color of red and text color of white -->
+    <!-- 3) Create a new button element. Give it a text "click me!", background color of red and text color of white -->
     <!-- Insert the button as the first element inside the body tag -->
 
-    <!-- Create a <p> tag in html, give it as class and style something -->
+    <!-- 4) Create a <p> tag in html, give it as class and style something -->
     <!-- Now Create a new class in CSS and try to append this class to the <p> element -->
     <p class="content">My name is Darshan L.</p>
     <script>
