Tic Tac Toe Problem JavaScript Code

--- a/Frontend-practise/Tic Tac Toe/index.html
+++ b/Frontend-practise/Tic Tac Toe/index.html
@@ -25,6 +25,8 @@
         </div>
     </div>
     <button id="reset-btn">Reset Game</button>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
